# rovertAIChat

./: .env  .env.example  .gitignore  Caddyfile  README.md  TestCases.xlsx  docker-compose.yml
backend/: .env.example  .gitignore  DATABASE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/src/: database.py  main.py
backend/src/auth/: config.py  jwt.py  service.py
backend/src/core/: logger.py  rate_limiter.py
backend/src/models/: chat_models.py  user.py  user_settings.py
backend/src/routers/: auth.py  chats.py  ollama.py  user.py  user_settings.py
backend/src/schemas/: chat.py  ollama.py  user.py  user_settings.py
backend/src/services/: chat.py  chat_models.py  user.py  user_settings.py
backend/src/tests/: conftest.py  test_auth.py  test_user.py  test_user_settings.py
frontend/: .gitignore  Dockerfile  README.md  components.d.ts  docker-entrypoint.sh  eslint.config.js  index.html  nginx.conf  package.json  tailwind.config.js  vite.config.js
frontend/dev-dist/: sw.js
frontend/src/: App.vue
frontend/src/assets/: styles.css
frontend/src/components/: AdminModelManagement.vue  AdminSystemInfo.vue  AdminUserManagement.vue  AppHeader.vue  ChatContainer.vue  ChatHeader.vue  ChatInput.vue  ChatMessage.vue  ChatSidebar.vue  ConfirmationModal.vue  EditUserModal.vue  EditableTitle.vue  ErrorMessage.vue  LoadingSpinner.vue  ModelSelector.vue  OllamaStatusIndicator.vue  SettingsModal.vue  ToastNotification.vue  UserSettingsModal.vue
frontend/src/composables/: useChatDeletion.js  useChatInitialization.js  useChatOperations.js  useSidebar.js  (+4 more)
(+41 files in other folders)
